Pull all markup into components

--- a/frontend/resources/OG.html
+++ b/frontend/resources/OG.html
@@ -1,7 +1,7 @@
 <body>
 
 <div id="banner">
-    <img src="public/images/sltc-logo.png" alt="Stourbridge Tennis Club Logo" width="50" />
+    <img src="../public/images/sltc-logo.png" alt="Stourbridge Tennis Club Logo" width="50" />
 </div>
 
 <div id="fixtures">
@@ -15,11 +15,11 @@
             <div class="team teama">
                 <div class="players">
                     <div class="player">
-                        <img src="public/images/feds.png" class="playerimage">
+                        <img src="../public/images/feds.png" class="playerimage">
                         Ms. S.<br />BARTLETT<span class="seed"> (1)</span>
                     </div>
                     <div class="player player2">
-                        <img src="public/images/feds.png" class="playerimage">
+                        <img src="../public/images/feds.png" class="playerimage">
                         Mr. J<br />BARTLETT<span class="seed"> (1)</span>
                     </div>
                 </div>
@@ -28,11 +28,11 @@
             <div class="team teamb">
                 <div class="players">
                     <div class="player">
-                        <img src="public/images/feds.png" class="playerimage">
+                        <img src="../public/images/feds.png" class="playerimage">
                         Mr. D. <br />DENHAMSON
                     </div>
                     <div class="player player2">
-                        <img src="public/images/feds.png" class="playerimage">
+                        <img src="../public/images/feds.png" class="playerimage">
                         Ms. A.<br />GOODBY
                     </div>
                 </div>
@@ -56,11 +56,11 @@
                 <div class="team teama">
                     <div class="players">
                         <div class="player">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Ms. J.<br />SKYM<span class="seed"> (1)</span>
                         </div>
                         <div class="player player2">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Ms. A.<br />GOODBY<span class="seed"> (1)</span>
                         </div>
                     </div>
@@ -69,11 +69,11 @@
                 <div class="team teamb">
                     <div class="players">
                         <div class="player">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Ms. R. <br />PLUMB
                         </div>
                         <div class="player player2">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Ms. J. <br />PAYNE
                         </div>
                     </div>
@@ -97,11 +97,11 @@
                 <div class="team teama">
                     <div class="players">
                         <div class="player">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Mr. K.<br />WOODALL<span class="seed"> (1)</span>
                         </div>
                         <div class="player player2">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Mr. F.<br />FINLAYSON<span class="seed"> (1)</span>
                         </div>
                     </div>
@@ -110,11 +110,11 @@
                 <div class="team teamb">
                     <div class="players">
                         <div class="player">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Mr L. <br />DAVIES
                         </div>
                         <div class="player player2">
-                            <img src="public/images/feds.png" class="playerimage">
+                            <img src="../public/images/feds.png" class="playerimage">
                             Mr. G. <br />SMITHERSON
                         </div>
                     </div>
