--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link href="/style.css" rel="stylesheet" />
+        <link media="screen" href="/style.css" rel="stylesheet" />
+        <link media="screen" href="/iphonese.css" rel="stylesheet" />
+        <link media="screen and (min-width: 1400px)" href="/4ktv.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>AceFace</title>
     </head>
