--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
         <link media="screen" href="/style.css" rel="stylesheet" />
         <link media="screen" href="/basesizes.css" rel="stylesheet" />
         <link media="screen and (min-width: 1400px)" href="/4ktv.css" rel="stylesheet" />
+        <meta http-equiv="refresh" content="60">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>AceFace</title>
     </head>
